Updates to messaging, added notifications

--- a/config-sample.json
+++ b/config-sample.json
@@ -1,4 +1,8 @@
 {
   "token"  : "Mzg1OTcwOTYzODgxMzk0MTg3.DQJJYg.Q8JfcHPLzomcuyjI-z0st7SG4Jw",
-  "prefix" : "!"
+  "prefix" : "!",
+  "rpchost": "127.0.0.1",
+  "rpcuser": "me",
+  "rpcpass": "123",
+  "rpcport": 8332
 }
