--- a/settings.json
+++ b/settings.json
@@ -3,5 +3,6 @@
   "minSend": 0,
   "timeToRefreshTxs": 1,
   "txStaleConfirmations": 3,
-  "timeToRefreshNotifications": 3
+  "timeToRefreshNotifications": 3,
+  "blockexplorerUrl": "http://obsidianblockchain2.westeurope.cloudapp.azure.com/"
 }
