--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
   "txFee": 0.001,
   "minSend": 0,
+  "notifications": false,
   "timeToRefreshTxs": 1,
   "txStaleConfirmations": 3,
   "timeToRefreshNotifications": 3,
