--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "odn-tipbot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Discord Tipbot for Obsidian",
   "main": "discord.js",
   "dependencies": {
+    "async": "^2.6.0",
     "bitcoin-core": "^2.0.0",
     "discord.js": "^11.2.1"
   },
