--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odn-tipbot",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Discord Tipbot for Obsidian",
   "main": "discord.js",
   "dependencies": {
@@ -11,7 +11,9 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node discord.js"
+    "dev": "node discord.js",
+    "start": "forever start ./forever/production.json",
+    "stop": "forever stop discord-tipbot",
   },
   "author": "",
   "license": "ISC"
