Added ability to tip penguins; Fixed blockexplorer url

--- a/settings.json
+++ b/settings.json
@@ -5,5 +5,5 @@
   "timeToRefreshTxs": 1,
   "txStaleConfirmations": 3,
   "timeToRefreshNotifications": 3,
-  "blockexplorerUrl": "http://obsidianblockchain2.westeurope.cloudapp.azure.com/"
+  "blockexplorerUrl": "https://blockexplorer.obsidianplatform.com/"
 }
